--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 		'Logo Logo Weather Weather Weather Weather Head Head Head Nav Nav Nav'
 		'Logo Logo Weather Weather Weather Weather Head Head Head Nav Nav Nav'
 		'Sidebar Sidebar Dash Dash Dash Dash Dash Dash Dash Dash Dash Dash'
-		'Sidebar Sidebar Dash Dash Dash Dash Dash Dash Dash Dash Dash Dash'
+		'Sidebar Sidebar Body Body Body Body Body Body Body Body Body Body'
 		'Sidebar Sidebar Body Body Body Body Body Body Body Body Body Body'
 		'Sidebar Sidebar Body Body Body Body Body Body Body Body Body Body'
 		'Sidebar Sidebar Body Body Body Body Body Body Body Body Body Body'
