--- a/src/Styles/Logo.css
+++ b/src/Styles/Logo.css
@@ -3,6 +3,5 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: beige;
-	border: 2px solid black;
+	border: 2px solid blue;
 }
